* index.html: Mention rhug. 	* done.html: Mention rhug, WebMiel.

--- a/htdocs/java/done.html
+++ b/htdocs/java/done.html
@@ -167,6 +167,35 @@
 	</td>
       </tr>
       <!-- End Fluid Dynamics -->
+      <!-- rhug -->
+      <tr valign="top">
+        <td><b>rhug</b></td>
+	<td>Anthony Green and friends have set up rhug, a collection
+	    of free software Java packages set up to build with gcj.
+	    Both sources and RPMs are available.
+	</td>
+	<td>The <a href="http://sources.redhat.com/rhug/">rhug</a>
+	    page.
+	</td>
+      </tr>
+      <!-- End rhug -->
+      <!-- WebMiel -->
+      <tr valign="top">
+        <td><b>WebMiel</b></td>
+	<td>Christophe Roux has been working on software for
+	    community communications over http.  This program,
+	    WebMiel, uses Tomcat and has been working with gcj since
+	    mid-2002.  The documentation is in French.
+	</td>
+	<td>The <a href="http://www.webmiel.fr/">WebMiel</a>
+	    page.  <a
+	    href="http://gcc.gnu.org/ml/java/2002-11/msg00456.html">Entry</a>
+	    submitted by <a
+	    href="mailto:ch_roux@club-internet.fr">Christophe
+	    Roux</a>.
+	</td>
+      </tr>
+      <!-- End WebMiel -->
       </table>
 
 </body>
