--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -50,6 +50,14 @@ libgcj is slowly being merged with <a
 href="http://www.gnu.org/software/classpath/">GNU Classpath</a>.  (You
 can see the <a href="libgcj-classpath-compare.html">status of the merge</a>.)
 </p>
+
+<p>
+Many free software Java packages have been ported to work with GCJ.  A
+collection of such packages are in the <a
+href="http://sources.redhat.com/rhug/">rhug</a> project.  Both sources
+and RPMs are available.
+</p>
+
 <br />
 <br />
 
