Add reference to VRP pass provided by Steven Bosscher.

--- a/htdocs/projects/tree-ssa/index.html
+++ b/htdocs/projects/tree-ssa/index.html
@@ -262,6 +262,14 @@ href="http://www.gnu.org/software/gcc/readings.html">literature</a>.</p>
 
 <dt><em>Copy Propagation</em></dt>
 <dd></dd>
+
+<dt><em>VRP (Value Range Propagation)</em></dt>
+<dd>This optimization tracks the weighted value ranges of variables through
+    a program, much like constant propagation. These value ranges may be
+    either numeric or symbolic in nature. A paper describing the algorithm,
+    as well as some applications and experimental results, is available at <a
+    href="http://www.pattosoft.com.au/jason/Papers/ValueRangeProp/">
+    http://www.pattosoft.com.au/jason/Papers/ValueRangeProp/</a>.</dd>
 </dl>
 
 
