--- a/htdocs/rsync.html
+++ b/htdocs/rsync.html
@@ -19,7 +19,7 @@ the burden on the GCC main site, and browse the source locally using cvs.</p>
 <h2>Using rsync</h2>
 
 <p>The GCC repository is available at <code>rsync://gcc.gnu.org/gcc-cvs</code>.
-The whole repository does take over 450M of disk space, 
+The whole repository does take over 950M of disk space, 
 which will take a substantial time to transfer.
 Subsequent synchronisations will be much faster though, as rsync uses
 a smart algorithm to only transfer differences over the network.</p>
@@ -27,7 +27,7 @@ a smart algorithm to only transfer differences over the network.</p>
 <p>Here is how you get a copy of the repository:</p>
 <pre>
  % rsync --archive --delete --checksum --compress \
-         --stats rsync://gcc.gnu.org/gcc-cvs .
+         --stats rsync://gcc.gnu.org/gcc-cvs gcc-cvs
 </pre>
 <p>The same command can be run periodically to synchronize your copy of
 the repository.</p>
