--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -46,6 +46,20 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev56-unknown-linux-gnu</td>
+<td>Debian 3.0, glibc 2.3.1, kernel 2.2.20</td>
+<td>Successful (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01101.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>alphaev6-dec-osf4.0f</td>
+<td>Tru64</td>
+<td>Successful (C, with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00124.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>alphaev67-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Successful (C, C++, F77):
@@ -191,6 +205,13 @@ Installing GCC: Final Installation</a>.</p>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00829.html">3.2.1</a>
 </td>
+</tr>
+
+<tr>
+<td>i586-pc-linux-gnu (k6)</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00119.html">3.2.1</a></td>
 </tr>
 
 <tr>
@@ -733,6 +754,13 @@ Installing GCC: Final Installation</a>.</p>
 <tr>
 <td>sparc-sun-solaris2.9</td>
 <td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-11/msg01082.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-08/msg00622.html">3.2</a>
 </td>
@@ -756,11 +784,18 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>sparcv9-sun-solaris2.7</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00782.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
 <td>sparcv9-sun-solaris2.9</td>
 <td>&nbsp;</td>
 <td>Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00570.html">3.2</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00782.html">3.2.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00570.html">3.2</a>
 </td>
 </tr>
 
