Fix markup. By R. Kelley Cook <robert_k_cook@comerica.com>.

--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -205,9 +205,9 @@
     	<ul>
 	  <li>SSE2 and 3dNOW! intrinsics are now supported.</li>
 	  <li>Support for thread local storage has been added to the IA-32
-	      and x86-64 ports.
+	      and x86-64 ports.</li>
 	  <li>The x86-64 port has been significantly improved.</li>
-	</ul>
+	</ul></li>
     <li>The following changes have been made to the MIPS port:
 	<ul>
 	  <li>All configurations now accept the <code>-mabi</code>
