Link to the main 3.2 page instead of the 3.2 changes page. By R. Kelley Cook <robert_k_cook@comerica.com>.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -42,7 +42,7 @@ to maintain and improve quality.</p>
 
 <dl>
 <dt><strong>Current release series:</strong>
-  <a href="gcc-3.2/changes.html">GCC 3.2.1</a> (released 2002-11-21)
+  <a href="gcc-3.2/">GCC 3.2.1</a> (released 2002-11-21)
 </dt><dd>
   Open for all maintainers; fixes for regressions only.
 </dd>
