--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -152,10 +152,15 @@ you may want to check out include:</p>
       based pipeline hazard recognizer.  </li>
   <li><a href="projects/cfg.html">cfg-branch</a></li>
   <li><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></li>
-  <li>x86-64-branch.  This branch contains a stable development
-  version for x86-64 development and is maintained by Jan Hubicka
-  &lt;<a href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas
-  Jaeger &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.</li>
+  <li>hammer-3_3-branch.  The goal of this branch is to have a stable
+  compiler based on GCC 3.3 with a improved performance for AMD's
+  64-bit Hammer CPUs.  The branch is maintained by Jan Hubicka &lt;<a
+  href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas Jaeger
+  &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.  Patches added
+  on this branch might not be appropriate for the GCC 3.3 branch due
+  to our policies concerning release branches.  All patches will be
+  added to mainline CVS (for 3.4).  The branch is regularly merged
+  with the GCC 3.3 branch.</li>
   <li>pch-branch.  This branch contains work-in-progress towards a
   precompiled header implementation.</li>
   <li>cp-parser-branch.  This branch contains a new hand-written recursive
