--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -153,7 +153,7 @@ you may want to check out include:</p>
   <li><a href="projects/cfg.html">cfg-branch</a></li>
   <li><a href="projects/ast-optimizer.html">ast-optimizer-branch</a></li>
   <li>hammer-3_3-branch.  The goal of this branch is to have a stable
-  compiler based on GCC 3.3 with a improved performance for AMD's
+  compiler based on GCC 3.3 with improved performance for AMD's
   64-bit Hammer CPUs.  The branch is maintained by Jan Hubicka &lt;<a
   href="mailto:jh@suse.cz">jh@suse.cz</a>&gt; and Andreas Jaeger
   &lt;<a href="mailto:aj@suse.de">aj@suse.de</a>&gt;.  Patches added
