--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -82,6 +82,11 @@ to maintain and improve quality.</p>
 <h2>News/Announcements</h2>
 
 <dl>
+<dt><b>December 4, 2002</b></dt>
+<dd>
+Nathan Sidwell of CodeSourcery has contributed an <a href="http://gcc.gnu.org/ml/gcc-patches/2002-11/msg01858.html">implementation of
+non-trivial covariant returns for non-varadic virtual functions</a>.
+</dd>
 
 <dt><b>November 21, 2002</b></dt>
 <dd>
