Clarify who may import files maintained outside our tree.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -144,8 +144,8 @@ People interested in when a particular patch is committed can check
 CVS or the <a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a>
 list.</p>
 
-<p>Maintainers are free to import files maintained outside the tree
-from their official versions without explicit write approval.  Such
+<p>Everyone with CVS write access is free to import files maintained outside
+the tree from their official versions without explicit write approval.  Such
 files would include <code>config.guess</code> and
 <code>config.sub</code>.</p>
 
