Add a cross-reference concerning the update of upstream packages.

--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -144,10 +144,10 @@ People interested in when a particular patch is committed can check
 CVS or the <a href="http://gcc.gnu.org/ml/gcc-cvs/">gcc-cvs</a>
 list.</p>
 
-<p>Everyone with CVS write access is free to import files maintained outside
-the tree from their official versions without explicit write approval.  Such
-files would include <code>config.guess</code> and
-<code>config.sub</code>.</p>
+<p>Everyone with CVS write access is free to
+<a href="codingconventions.html#upstream">import files maintained outside
+the tree from their official versions</a> without explicit write approval.
+</p>
 
 <p>Any maintainer with CVS write access may <a href="#branches">create
 and use a branch</a> for development, including outside the parts of
