--- a/htdocs/codingconventions.html
+++ b/htdocs/codingconventions.html
@@ -331,7 +331,7 @@ noted:</p>
 </ul>
 
 
-<h2>Upstream packages</h2>
+<h2 id="upstream">Upstream packages</h2>
 
 <p>Some files and packages in the CVS tree are imported from elsewhere,
 and we want to minimize divergence from their upstream sources.  The
