Move chip documention of obsolete ports

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -56,16 +56,6 @@ tahoe. These are listed here just for completeness.
 </p>
 
 <ul>
- <li>1750a
-  <br />Exact chip name: MIL-STD-1750A processor
-  <br />Manufacturers: various
-  <br /><a href="http://www.cleanscape.net/stdprod/xtc1750a/resources/mil-std-1750.zip">Specification</a>
- </li>
-   
- <li>a29k
-  <br />Manufacturer: <a href="http://www.amd.com">AMD</a>
- </li>
- 
  <li>alpha
    <br />Manufacturer: <a href="http://www.compaq.com">Compaq (DEC)</a>  
    <br />The <a href="ftp://ftp.digital.com/pub/Digital/info/semiconductor/literature/dsc-library.html">Alpha
@@ -98,15 +88,6 @@ tahoe. These are listed here just for completeness.
    <br /><a href="http://www.ti.com/sc/docs/psheets/man_dsp.htm">DSP Manuals</a>
  </li>
  
- <li>clipper
-  <br />Manufacturer: <a href="http://www.intergraph.com/">Intergraph</a>
-  <br />Exact machine name: CLIPPER
- </li>
- 
- <li>convex (c1, c2, c3[248])
-   <br />Manufacturer: <a href="http://www.convex.com/">Convex (HP)</a>
- </li>
- 
  <li>CRIS
    <br />Manufacturer: <a href="http://www.axis.com/">Axis Communications</a>
    <br />Acronym stands for: Code Reduced Instruction Set
@@ -123,12 +104,6 @@ tahoe. These are listed here just for completeness.
  
  <li>dsp16xx
    <br />Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
- </li>
- 
- <li>elxsi
-  <br />Manufacturer: ELXSI
-  <br />Exact machine name: ELXSI 6400
-  <br /><a href="http://nhse.npac.syr.edu/hpccsurvey/orgs/elxsi/elxsi.html">Company and Machine information</a>
  </li>
  
  <li>fr30
@@ -166,10 +141,6 @@ tahoe. These are listed here just for completeness.
   <br /><a href="http://www.sandpile.org">www.sandpile.org:</a>
   Christian Ludloff's technical x86 processor information.
   <br /><a href="http://www.amd.com/us-en/Corporate/VirtualPressRoom/0,,51_104_857_875^2371,00.html">AMD's x86-64 architecture</a>
- </li>
- 
- <li>i860
-   <br />Manufacturer: <a href="http://www.intel.com">Intel</a>
  </li>
  
  <li>i960
@@ -265,11 +236,6 @@ tahoe. These are listed here just for completeness.
   <br /><a href="http://simh.trailing-edge.com/">Simulators</a>
  </li>
  
- <li>pj (picoJava)
-  <br />Manufacturer: <a href="http://www.sun.com/">Sun</a>
-  <br /><a href="http://www.sun.com/microelectronics/picoJava/">picoJava</a>
- </li>
- 
  <li>romp
   <br />Manufacturer: <a href="http://www.ibm.com">IBM</a>
   <br />Acronym stands for: Research/Office Products MicroProcessor
@@ -304,11 +270,6 @@ tahoe. These are listed here just for completeness.
  
  <li>vax
   <br />Manufacturer: <a href="http://www.dec.com">DEC (Compaq)</a>
- </li>
- 
- <li>we32k
-  <br />Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
-  <br /><a href="http://cua6.csuohio.edu/~bob/3b2faq.html">AT&amp;T 3B2 FAQ</a>
  </li>
  
  <li>xtensa
@@ -545,6 +506,55 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
   href="http://www.unicode.org/unicode/reports/tr15/">Unicode Normalization
   Forms</a>.</li>
 
+</ul>
+
+
+<h2>Chip Documentation of Obsolete Ports</h2> 
+
+<p>
+Below is the list of ports that gcc used to support.
+</p>
+
+<ul>
+  <li>1750a
+  <br />Exact chip name: MIL-STD-1750A processor
+  <br />Manufacturers: various
+  <br /><a href="http://www.cleanscape.net/stdprod/xtc1750a/resources/mil-std-1750.zip">Specification</a>
+  </li>
+
+  <li>a29k
+  <br />Manufacturer: <a href="http://www.amd.com">AMD</a>
+  </li>
+
+  <li>clipper
+  <br />Manufacturer: <a href="http://www.intergraph.com/">Intergraph</a>
+  <br />Exact machine name: CLIPPER
+  </li>
+
+  <li>convex (c1, c2, c3[248])
+  <br />Manufacturer: <a href="http://www.convex.com/">Convex (HP)</a>
+  </li>
+
+  <li>elxsi
+  <br />Manufacturer: ELXSI
+  <br />Exact machine name: ELXSI 6400
+  <br /><a href="http://nhse.npac.syr.edu/hpccsurvey/orgs/elxsi/elxsi.html">Company and Machine information</a>
+  </li>
+
+  <li>i860
+  <br />Manufacturer: <a href="http://www.intel.com">Intel</a>
+  </li>
+ 
+  <li>pj (picoJava)
+  <br />Manufacturer: <a href="http://www.sun.com/">Sun</a>
+  <br /><a href="http://www.sun.com/microelectronics/picoJava/">picoJava</a>
+  </li>
+
+  <li>we32k
+  <br />Manufacturer: <a href="http://www.att.com">AT&amp;T</a>
+  <br /><a href="http://cua6.csuohio.edu/~bob/3b2faq.html">AT&amp;T 3B2 FAQ</a>
+  </li>
+ 
 </ul>
  
 </body>
