--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -506,7 +506,7 @@ papers, hot list pages, potential software/shareware, all known companies, etc.:
 <h2>Chip Documentation of Obsolete Ports</h2> 
 
 <p>
-Below is the list of ports that gcc used to support.
+Below is the list of ports that GCC used to support.
 </p>
 
 <ul>
