Bugs in state "feedback" that have not received any response for three months can be closed.

--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -95,6 +95,9 @@ version of GCC is released.</p>
 
 <h2>Procedures and Policies</h2>
 
+<p><strong>Bugs in state "feedback"</strong> that have not received any
+response for three months can be closed.</p>
+
 <p><strong>Bugs in category "bootstrap"</strong> that refer to older
 releases or snapshots/CVS versions should be put into state "feedback",
 asking the reporter whether she can still reproduce the problem and to
