--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -70,6 +70,13 @@ Installing GCC: Final Installation</a>.</p>
 </tr>
 
 <tr>
+<td>alphaev67-dec-osf5.1</td>
+<td>&nbsp;</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00273.html">3.2</a></td>
+</tr>
+
+<tr>
 <td>alphaev67-unknown-linux-gnu</td>
 <td>Red Hat 7.1, glibc 2.2.3, kernel 2.4.3</td>
 <td>Successful (C, C++):
@@ -356,6 +363,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.1, glibc 2.2.4, kernel 2.4.2</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00286.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.2, glibc 2.2.4, binutils 2.13.1, kernel 2.4.7</td>
 <td>Successful:
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00786.html">3.2.1</a>
@@ -630,11 +644,28 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>LinuxPPC 2000 Q4, glibc 2.1.3, kernel 2.2.185ppc</td>
+<td>Successful (C, C++, Java, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00499.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
 <td>SuSE 7.1, glibc 2.2, binutils 2.13, kernel 2.4.2</td>
 <td>Successful (C, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-11/msg00815.html">3.2.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00708.html">3.2.1</a>
+</td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
+<td>Yellow Dog Linux 2.3, glibc 2.2.5, binutils 2.13.90.0.16, kernel 2.4.20</td>
+<td>Successful (C, C++, Java)
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00496.html">3.2.1</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2002-12/msg00344.html">3.2.1</a>
 </td>
 </tr>
 
