--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -15,10 +15,11 @@
 
   <ul>
     <li>With <code>-nostdinc</code> the preprocessor used to ignore
-        standard include paths <emph>and</emph> include paths
+        both standard include paths <strong>and</strong> include paths
         contained in environment variables.  It was neither documented
         nor intended that environment variable paths be ignored, so
         this has been corrected.</li>
+
   </ul>
 
 <h2>General Optimizer Improvements</h2>
