Change the list of active releases: active release branch is 3.3, active development (mainline) will become 3.4; 3.1.x drops off the list.  Also mention (temporary) that the mainline is currently only available for fixes for stabilization after the merge from the basic improvements branch.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -36,37 +36,40 @@ to maintain and improve quality.</p>
 
 
 <!-- NOTE: Of the following four items, we always want to show exactly
-     three - either the first, second, and third, or the second, third,
+     three - either the first, second, and fourth, or the second, third,
      and fourth.
 -->
 
 <dl>
+<dt><strong>Active release branch:</strong>
+  will become <a href="gcc-3.3/changes.html">GCC 3.3</a>
+</dt><dd>
+  <a href="develop.html#stage3">Stage 3</a>; open for all maintainers.
+</dd>
+
 <dt><strong>Current release series:</strong>
   <a href="gcc-3.2/">GCC 3.2.1</a> (released 2002-11-21)
 </dt><dd>
   Open for all maintainers; fixes for regressions only.
 </dd>
 
+<!--
 <dt><strong>Previous release series:</strong>
   <a href="gcc-3.1/">GCC 3.1.1</a> (released 2002-07-26) 
 </dt><dd>
   GCC 3.1.1 is the last 3.1 release; the 3.1-branch became the
   <a href="gcc-3.2/changes.html">GCC 3.2</a>-branch.
 </dd>
-
-<!--
-<dt><strong>Active release branch:</strong>
-  GCC 3.2.1 (<a href="gcc-3.1/criteria.html">release criteria</a>,
-             <a href="gcc-3.2/changes.html">changes</a>)
-</dt><dd>
-  Non-documentation commits require approval by release manager.
-</dd>
 -->
 
 <dt><strong>Active development (mainline):</strong>
-  will become <a href="gcc-3.3/changes.html">GCC 3.3</a>
+  will become <a href="gcc-3.4/changes.html">GCC 3.4</a>
 </dt><dd>
-  <a href="develop.html#stage3">Stage 3</a>; open for all maintainers.
+  <a href="develop.html#stage1">Stage 1</a>;
+  temporarily limited to fixes to stabilize the merge from the
+  basic improvements branch.
+<!-- open for all maintainers.
+-->
 </dd>
 </dl>
 
