Mention updating the GCC home page to list the new active release branch.

--- a/htdocs/branching.html
+++ b/htdocs/branching.html
@@ -36,6 +36,10 @@ of <code>buildstat.html</code>, <code>changes.html</code>, and
 <code>criteria.html</code>.  Update the toplevel
 <code>buildstat.html</code> to refer to this version.</li>
 
+<li>Update the <code>index.html</code> web page to show the new active
+release branch, the current release series, and active development
+(mainline).  Update the version and development stage for mainline.</li>
+
 <li>Update <code>f/root.texi</code> on the branch to use <code>@clear
 DEVELOPMENT</code>.</li>
 
