Two changes from Volker Reichelt <reichelt@igpm.rwth-aachen.de> discussed in mailing lists: policy for ice-on-illegal for which release version reports "bailing out", and clarify policy for bugs in "feedback" state.

--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -95,8 +95,9 @@ version of GCC is released.</p>
 
 <h2>Procedures and Policies</h2>
 
-<p><strong>Bugs in state "feedback"</strong> that have not received any
-response for three months can be closed.</p>
+<p><strong>Bugs that are in state "feedback"</strong> because they lack
+information that is necessary for reproducing the problem can be closed
+if no response was received for three months.</p>
 
 <p><strong>Bugs in category "bootstrap"</strong> that refer to older
 releases or snapshots/CVS versions should be put into state "feedback",
@@ -108,6 +109,12 @@ report her findings in any case (whether positive or negative).</p>
 <li>if the reponse is "still broken", change the state to "open", and</li>
 <li>if no response arrives, close the PR after three months.</li>
 </ul>
+
+<p><strong>Bugs in category "ice-on-illegal-code"</strong>, where gcc
+emits a sensible error message before issuing an ICE (the ICE will be
+replaced by the message "confused by earlier errors, bailing out" in
+release versions) should get "low" priority.
+It should be noted in the audit trail, that the error recovery fails.</p>
 
 </body>
 </html>
