Another change from Volker Reichelt that was discussed in mailing lists; he posted this one on 2002-12-05.  It describes a new policy for the synopsis line of a regression.

--- a/htdocs/gnatswrite.html
+++ b/htdocs/gnatswrite.html
@@ -99,6 +99,19 @@ version of GCC is released.</p>
 information that is necessary for reproducing the problem can be closed
 if no response was received for three months.</p>
 
+<p><strong>Regressions</strong> should be explicitly marked as such.
+The synopsis line should read</p>
+
+<blockquote>
+[&lt;branches-to-fix&gt; regression] &lt;rest-of-synopsis&gt;
+</blockquote>
+
+<p>where &lt;branches-to-fix&gt; is the list of <em>maintained</em>
+branches (separated by slashes) that need fixing. A regression should
+start with priority "<strong>high</strong>" to bring it to attention.
+It may be downgraded later if a defect is not important enough to justify
+"high priority".</p>
+
 <p><strong>Bugs in category "bootstrap"</strong> that refer to older
 releases or snapshots/CVS versions should be put into state "feedback",
 asking the reporter whether she can still reproduce the problem and to
