Mark opened the mainline, so update its status.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -66,10 +66,7 @@ to maintain and improve quality.</p>
   will become <a href="gcc-3.4/changes.html">GCC 3.4</a>
 </dt><dd>
   <a href="develop.html#stage1">Stage 1</a>;
-  temporarily limited to fixes to stabilize the merge from the
-  basic improvements branch.
-<!-- open for all maintainers.
--->
+  open for all maintainers.
 </dd>
 </dl>
 
