* gcj-3.3-status.html: Updated platform owners.

--- a/htdocs/java/gcj-3.3-status.html
+++ b/htdocs/java/gcj-3.3-status.html
@@ -29,7 +29,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 
 <tr> <td>i686-pc-linux-gnu</td>
      <td> &nbsp; </td>
-     <td> &nbsp; </td>
+     <td> Tom Tromey </td>
 </tr>
 
 <tr> <td>i386-*-freebsd*</td>
@@ -49,7 +49,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 
 <tr> <td>gnu-linux-unknown-powerpc</td>
      <td> &nbsp; </td>
-     <td> Mark </td>
+     <td> Mark Wielaard </td>
 </tr>
 
 <tr> <td> sparc-sun-solaris2.5.1 </td>
@@ -100,6 +100,16 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 <tr> <td>alpha-dec-osf5.1</td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
+</tr>
+
+<tr> <td>s390-*-linux</td>
+     <td> &nbsp; </td>
+     <td> Ulrich Weigand </td>
+</tr>
+
+<tr> <td>s390x-*-linux</td>
+     <td> &nbsp; </td>
+     <td> Ulrich Weigand </td>
 </tr>
 
 <tr> <td>linux -x- xscale-elf </td>
