* gcj-3.3-status.html: Anthony will handle xscale-elf. 	Added links to project list.

--- a/htdocs/java/gcj-3.3-status.html
+++ b/htdocs/java/gcj-3.3-status.html
@@ -114,7 +114,7 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 
 <tr> <td>linux -x- xscale-elf </td>
      <td> &nbsp; </td>
-     <td> &nbsp; </td>
+     <td> Anthony Green </td>
 </tr>
 
 </table>
@@ -125,32 +125,32 @@ href="http://gcc.gnu.org/cgi-bin/gnatsweb.pl?database=gcc&amp;text=&amp;multitex
 
 <tr><th> Package </th> <th> Status </th> <th> Who </th> </tr>
 
-<tr> <td> Classpath build </td>
+<tr> <td> <a href="http://www.gnu.org/software/classpath/">Classpath</a> build </td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> rhug </td>
+<tr> <td> <a href="http://sources.redhat.com/rhug/">rhug</a> </td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> Mauve </td>
+<tr> <td> <a href="http://sources.redhat.com/mauve/">Mauve</a> </td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> Jacks </td>
+<tr> <td> <a href="http://www-124.ibm.com/developerworks/oss/cvs/jikes/~checkout~/jacks/jacks.html">Jacks</a> </td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> Kawa </td>
+<tr> <td> <a href="http://www.gnu.org/software/kawa/">Kawa</a> </td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
 </tr>
 
-<tr> <td> GNU Crypto </td>
+<tr> <td> <a href="http://www.gnu.org/software/classpathx/crypto/crypto.html">GNU Crypto</a> </td>
      <td> &nbsp; </td>
      <td> &nbsp; </td>
 </tr>
