Add entries for 3.2.1:   alpha-dec-osf4.0f   powerpc-unknown-linux-gnu (Yellow Dog Linux 2.3, glibc 2.2.5, kernel 2.4.19)   sparcv9-sun-solaris2.9 (64-bit) Add entries for 3.2:   alpha-unknown-netbsd1.6   i686-pc-linux-gnu (Red Hat 7.3, glibc 2.2.5, kernel 2.4.18)

--- a/htdocs/gcc-3.2/buildstat.html
+++ b/htdocs/gcc-3.2/buildstat.html
@@ -23,6 +23,13 @@ Installing GCC: Final Installation</a>.</p>
 <table>
 
 <tr>
+<td>alpha-dec-osf4.0f</td>
+<td>Tru64 4.0f</td>
+<td>Successful (with tweaks):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01256.html">3.2.1</a></td>
+</tr>
+
+<tr>
 <td>alpha-dec-osf4.0g</td>
 <td>Tru64 4.0g</td>
 <td>Successful (C, C++, F77, Java, with tweaks):
@@ -36,6 +43,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-09/msg00361.html">3.2</a>
 </td>
+</tr>
+
+<tr>
+<td>alpha-unknown-netbsd1.6</td>
+<td>NetBSD 1.6</td>
+<td>Successful (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01178.html">3.2</a></td>
 </tr>
 
 <tr>
@@ -416,6 +430,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>i686-pc-linux-gnu</td>
+<td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.18</td>
+<td>Successful:
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01138.html">3.2</a></td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
 <td>Red Hat 7.3, glibc 2.2.5, kernel 2.4.19</td>
 <td>Successful (Ada, C, C++, F77, Java, Obj-C):
 <a href="http://gcc.gnu.org/ml/gcc/2002-08/msg01000.html">3.2</a>
@@ -661,6 +682,13 @@ Installing GCC: Final Installation</a>.</p>
 
 <tr>
 <td>powerpc-unknown-linux-gnu</td>
+<td>Yellow Dog Linux 2.3, glibc 2.2.5, kernel 2.4.19</td>
+<td>Successful: (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01124.html">3.2.1</a></td>
+</tr>
+
+<tr>
+<td>powerpc-unknown-linux-gnu</td>
 <td>Yellow Dog Linux 2.3, glibc 2.2.5, binutils 2.13.90.0.16, kernel 2.4.20</td>
 <td>Successful (C, C++, Java)
 <a href="http://gcc.gnu.org/ml/gcc/2002-12/msg00496.html">3.2.1</a>
@@ -820,6 +848,13 @@ Installing GCC: Final Installation</a>.</p>
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2002-11/msg00782.html">3.2.1</a>
 </td>
+</tr>
+
+<tr>
+<td>sparcv9-sun-solaris2.9 (64-bit)</td>
+<td>&nbsp;</td>
+<td>Successful (C, C++, F77, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2002-12/msg01029.html">3.2.1</a></td>
 </tr>
 
 <tr>
